name: Raytracer
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
data-dir: ""
 
executable Raytracer
    build-depends: QuickCheck -any, base -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    other-modules: Trace World PPM Raster Camera LinearAlgebra
 
test-suite test-Raytracer
    build-depends: QuickCheck -any, base -any
    type: exitcode-stdio-1.0
    main-is: Main.hs
    buildable: True
    cpp-options: -DMAIN_FUNCTION=testMain
    hs-source-dirs: src